166214158-story(filter search):implement search functionality based on optional filters
[Delivers #166214158]
